<resources>
    <string name="app_name">Ontraport</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_account">Account</string>
    <string name="menu_admin">Administration</string>
    <string name="menu_users">Manage Users</string>
    <string name="menu_profile">Personal Profile</string>
    <string name="menu_logout">Log Out</string>

    <string name="contacts">Contacts</string>
    <string name="todo">TODO</string>
    <string name="ontraport">Ontraport</string>
    <string name="app_id">Api-Appid</string>
    <string name="app_key">Api-Key</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="action_field">Change Field</string>
    <string name="action_sequence">Sequences</string>
    <string name="action_campaign">Campaigns</string>
    <string name="action_tag">Tags</string>
    <string name="action_search">Search</string>
    <string name="action_group">Change Group</string>
    <string name="action_select_group">Select All in Group</string>
    <string name="action_select_page">Select All on Page</string>
    <string name="action_select_deselect">Deselect All</string>
    <string name="action_remove">Remove</string>
    <string name="action_add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="action_rule">Rules</string>
    <string name="action_form">Forms</string>
    <string name="action_message">Messages</string>
    <string name="action_landingpage">Landingpages</string>
</resources>
