<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_group"
        android:title="@string/action_group"
        android:icon="@drawable/ic_group_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_group"
        android:title="@string/action_select_group"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_select_page"
        android:title="@string/action_select_page"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_select_deselect"
        android:title="@string/action_select_deselect"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
