<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity">

    <item
        android:id="@+id/action_tag"
        android:icon="@drawable/ic_tag_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_tag"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_campaign"
        android:icon="@drawable/ic_device_hub_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_campaign"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sequence"
        android:icon="@drawable/ic_cascade_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_sequence"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_field"
        android:icon="@drawable/ic_person_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_field"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
</menu>
